# Parallel-Depth-First-Search-for-DAG

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  README.md  project_description.md
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  mainpage.md
include/: csr.hpp  dag.hpp  dt.hpp  node.h
libs/: CMakeLists.txt
libs/dag/: CMakeLists.txt  README.md  dag.cpp  dag.hpp
libs/dag/test/: CMakeLists.txt  dag_test.cpp
libs/threadpool/: CMakeLists.txt  threadpool.hpp
libs/threadpool/include/: threadpool.hpp
libs/threadsafe/: CMakeLists.txt
libs/threadsafe_queue/: CMakeLists.txt  threadsafe_queue.hpp
pseudocodes/: pc_dag_to_dt  pc_final_labelling  pc_pre_post_order  pc_subgraph_size  pre_post_order.cpp  subgraph_size.cpp  subsize.cpp
src/: CMakeLists.txt  dag.cpp  dt  dt.cpp  main.cpp
test/: CMakeLists.txt  benchmark.cpp  dag_test.cpp  dt_test.cpp  subgraph_size_test.cpp  test.cpp  testlib.cpp
test/gra/: v100e10.gra  v20e15.gra  v8e3.gra
test/include/: amaze.gra.hpp  quer.gra.hpp  v20e15.gra.hpp  v8e3.gra.hpp
